--- a/index.html
+++ b/index.html
@@ -14,3 +14,5 @@
       <nav> <a href="project.html">PROJECT</a> </nav>
 <nav> <a href="resume.html" >RESUME</a> </nav>
 </CENTER>
+                           
+// Good job with the alignment and links. You might want to add more biographical text to your homepage.                           
